fix: Use the capitalized title in schedule/weekseven/index.qmd.

--- a/schedule/weekseven/index.qmd
+++ b/schedule/weekseven/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: Understanding Protocols
-description: "How do computer networking protocols operate?"
+description: "How Do Computer Networking Protocols Operate?"
 date: 2024-10-14
 layout: full
 toc: true
