--- a/schedule/weekseven/index.qmd
+++ b/schedule/weekseven/index.qmd
@@ -9,9 +9,8 @@ toc-expand: 3
 
 ## Exploration
 
-- {{< iconify fa6-solid book-open size=18px >}} Read chapters four and five 
-[Computer Systems Security: Planning for
-Success](https://web.njit.edu/~rt494/security/)
+- {{< iconify fa6-solid book-open size=18px >}} Read chapter four [Computer
+Systems Security: Planning for Success](https://web.njit.edu/~rt494/security/)
 
 ## Activities
 
@@ -22,10 +21,9 @@ Computer Networking
   - Learn how to detect and defend against network attacks
   - Continued highlighting of the concept of a "security synapse"
   - Instructor presentations that feature:
-    - Explanation of a high-level concept in the area of malware
+    - Explanation of a high-level concept networking protocols
     - In-class activity that connects concepts to real-world scenarios
-    - Implementation of a malware-adjacent concept in a programming language
-    - Question and answer session with learning peers and the course instructor
+    - Hands-on examples of the operation and behavior of networking protocols
   - No student discussion leaders for this week's material
 
 ## Slides
