--- a/schedule/weekeight/index.qmd
+++ b/schedule/weekeight/index.qmd
@@ -19,6 +19,7 @@ Systems Security: Planning for Success](https://web.njit.edu/~rt494/security/)
 Computer Networking
   - Understand design and use of networking protocols
   - Learn how to detect and defend against network attacks
+  - Learn how to exploit network protocol vulnerabilities
   - Continued highlighting of the concept of a "security synapse"
   - Instructor presentations that feature:
     - Explanation of a high-level concept networking protocols
