fix: Correct the label and link at the bottom of schedule/weeknine/index.qmd.

--- a/schedule/weeknine/index.qmd
+++ b/schedule/weeknine/index.qmd
@@ -35,4 +35,4 @@ Security Solutions
 <iframe class="slide-deck" src="../../slides/weeknine/"></iframe>
 ```
 
-{{< iconify majesticons presentation-play size=18px >}} Full Screen: [Week Nine: Networking Attacks](../../slides/weekeight/)
+{{< iconify majesticons presentation-play size=18px >}} Full Screen: [Week Nine: Security Solutions](../../slides/weeknine/)
