--- a/slides/weektwelve/index.qmd
+++ b/slides/weektwelve/index.qmd
@@ -38,6 +38,47 @@ format:
 
 :::
 
+# Least Privilege Principle
+
+::: {.fragment .fade style="margin-top: -0.45em; font-size: 1.00em;"}
+
+- **Principle**: Only permit necessary access
+- **Resources**: Processes, programs, user accounts
+- **Benefits**: Reduces attack surface, limits malware spread
+- **Compliance**: Easier audits, limited Internet access
+
+:::
+
+::: {.fragment .boxed-content .fade style="margin-top: -0.25em; font-size: 0.80em;"}
+
+- {{< iconify fa6-solid award >}} **Key Questions**:
+  - What do you prefer *more secure* or *easy-to-use*?
+  - What are principles to *striking* the *right balance*?
+
+:::
+
+## Multi-Factor Authentication (MFA)
+
+::: {.fragment .fade style="margin-top: -0.45em; font-size: 1.00em;"}
+
+- **Definition**: Two or more identification components
+- **Categories**: Username, password, token codes, biometrics
+- **Popular Products**: Google Authenticator, Authy, RSA IDs
+
+:::
+
+::: {.fragment .boxed-content style="margin-top: -0.25em; font-size: 0.9em;"}
+
+- {{< iconify fa6-solid arrows-rotate >}} Concrete examples of multi-factor authentication:
+  - Password and fingerprint scan
+  - Password and security token
+  - Password and facial recognition
+
+- {{< iconify fa6-solid lightbulb >}} **Benefits and drawbacks of multi-factor
+authentication**?
+
+:::
+
 ## Authenticating a Person
 
 ::: {.fragment .boxed-content .fade style="margin-top: 0.25em; font-size: 1em;"}
@@ -58,35 +99,28 @@ format:
 
 :::
 
-## Multi-Factor Authentication
-
-::: fragment
-
-- Combines two or more authentication methods
-- Increases security by requiring multiple proofs
-- Prevent unauthorized access with combined methods
-
-:::
-
-::: {.fragment .boxed-content style="margin-top: -0.5em; font-size: 0.9em;"}
-
-- {{< iconify fa6-solid arrows-rotate >}} Concrete examples of multi-factor authentication:
-  - Password and fingerprint scan
-  - Password and security token
-  - Password and facial recognition
-
-- {{< iconify fa6-solid lightbulb >}} **Benefits and drawbacks of multi-factor
-authentication**?
-
-:::
-
 # What comes next after authentication?
 
 ::: fragment
 
-- Attach an identity to processes and resources
-- Define access control lists (ACLs) for resources
-- Enforce permissions for users and groups
-- Practical security for both users and administrators
+- Provide **authorization** for both users and administrators
+- Attach an **identity** to processes and resources
+- Define **access control lists** (ACLs) for resources
+- Enforce **permissions** for users and groups
+
+:::
+
+# Authorization Models
+
+::: {.fragment .fade style="margin-top: -0.45em; font-size: 1.00em;"}
+
+- **MAC**: Mandatory Access Control
+  - High security, complex implementation
+- **DAC**: Discretionary Access Control
+  - Flexible, owner-controlled, less secure
+- **RBAC**: Role-Based Access Control
+  - Role-based, flexible, common
+- **ABAC**: Attribute-Based Access Control
+  - Attribute-based, flexible, rule-based
 
 :::
