--- a/slides/weeknine/index.qmd
+++ b/slides/weeknine/index.qmd
@@ -392,7 +392,7 @@ Operating system tracks each process, its owner, and its resources!
 ## Access Control Lists
 
 ```bash
-drwxr-xr-x    - gkapfham users 31 Oct 07:27  .gitj
+drwxr-xr-x    - gkapfham users 31 Oct 07:27  .git
 drwxr-xr-x    - gkapfham users  2 Sep 18:16  .github
 .rw-r--r-- 2.4k gkapfham users  2 Sep 18:23  .gitignore
 drwxr-xr-x    - gkapfham users 29 Oct 12:48  .quarto
